# swisstopo-mcp

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  claude_desktop_config.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish.yml
src/swisstopo_mcp/: api_client.py  geocoding.py  height.py  oereb.py  server.py
tests/: test_api_client.py  test_geocoding.py  test_height.py  test_oereb.py
